# users_service

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  log.ini  mypy.ini  pyproject.toml  sonar-project.properties
app/: config.py  dependencies.py  deps.py  main.py
app/crud/: users.py
app/db/: alembic.ini  mem.py  meta.py  session.py  utils.py
app/db/migrations/: env.py
app/migrations/: alembic.ini  env.py
app/migrations/versions/: 46569be94e3c_create_table_users.py  876637f0e825_create_users_table.py
app/models/: users.py
app/routers/: auth.py  files.py  users.py
app/schemas/: users.py
tests/: conftest.py  test_auth.py  test_users.py  utils.py
